# pdfium-redaction

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
pdfium_redaction/: __init__.py  bindings.py  libbase_allocator_partition_allocator_src_partition_alloc_allocator_base.dylib  libbase_allocator_partition_allocator_src_partition_alloc_allocator_core.dylib  libbase_allocator_partition_allocator_src_partition_alloc_allocator_shim.dylib  libbase_allocator_partition_allocator_src_partition_alloc_raw_ptr.dylib  libc++_chrome.dylib  libchrome_zlib.dylib  libicuuc.dylib  libthird_party_abseil-cpp_absl.dylib  libthird_party_harfbuzz-ng.dylib
